--- a/views/teams/show.ejs
+++ b/views/teams/show.ejs
@@ -5,4 +5,6 @@
 	<p>
 	  <%= team.members %>
 	</p>
+	<a href="/teams/edit/<%= team.name %>" class="btn btn-success">Edit</a>
+	<a href="/teams/<%= team.name %>" class="btn btn-danger delete-link">Delete Team</a>
 </div>
